# esp32_devices

./: .gitignore  API_ENDPOINTS.md  CMakeLists.txt  api.yml  partitions.csv  sdkconfig  sdkconfig.old
components/http_server/: CMakeLists.txt  api_description.md  http_api.c  http_api_device_info.c  http_api_wifi_config.c  http_api_wifi_scan.c  http_api_wifi_status.c  http_handlers.c  http_server.c  spiffs.c
components/http_server/include/: git_version.h  http_server.h
components/network_manager/: CMakeLists.txt  network_manager.c  network_setup.c
components/network_manager/include/: network_manager.h
main/: CMakeLists.txt  definitions.h  main.c
spiffs_image/: index.html  script.js  style.css  wifi.html  wifi.js
tests/pytest/api/: helper.py  test_wifi_config_ap.py  test_wifi_config_sta.py  test_wifi_scan.py  test_wifi_status.py
